FIX: position of chat loader fixed on mobile

--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -294,6 +294,13 @@
     width: 100%;
     height: 100%;
     z-index: 4;
+
+    .chatCollectionContent & {
+
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        top: 48px;
+      }
+    }
   }
 }
 
